--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -19,5 +19,5 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # - name: Run tests
-    #   run: pytest
+    - name: Run tests
+      run: pytest tests/test_sequence_count.py
