--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -20,4 +20,6 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
-      # run: pytest tests/test_sequence_count.py
+      run: |
+        pytest tests/test_nucleotide_count.py
+        pytest tests/test_multiline_nucleotide_count.py
